# Software-1st-sem

./: README.md
DGT-workshop3/: CMakeLists.txt  main.c
IMPR-Lecture-1/src/: CMakeLists.txt  exercise1.c  exercise2.c
IMPR-Lecture-3-live-main/: README.md
IMPR-Lecture-3-live-main/src/: CMakeLists.txt  live.c  sten_saks_papir.c
IMPR-Lecture-4-live-main/src/: firkant.c  guess.c  live.c  omvendt.c  trekant.c
IMPR-Lecture-5-live-main/src/: CMakeLists.txt  cirkel.c  trekant.c
Lecture8/: CMakeLists.txt  Lecture8_live.c  main.c
P1-Projekt-final/: CMakeLists.txt  CalculateCheapestOption.c  CalculateCheapestOption.h  README.md  StoreListGeneration.c  StoreListGeneration.h  main.c  shopping_list.c  shopping_list.h
SearchCompareV1.1/: CMakeLists.txt  main.c
Workshop2/: CMakeLists.txt  main.c
handin-1-NFage/: CMakeLists.txt  README.md
handin-1-NFage/src/: CMakeLists.txt  handin1.c
handin-2-NFage/: CMakeLists.txt  README.md
handin-2-NFage/src/: CMakeLists.txt  handin2.c
handin-3-NFage/: CMakeLists.txt  README.md
handin-3-NFage/src/: CMakeLists.txt  handin3.c
handin-4-NFage/: CMakeLists.txt  README.md
handin-4-NFage/src/: handin4.c
handin-5-NFage/: CMakeLists.txt
handin-5-NFage/src/: CMakeLists.txt  handin5.c
impr-lecture-7-live-NFage/: CMakeLists.txt
impr-lecture-7-live-NFage/src/: CMakeLists.txt  cashier.c
lecture-1-NFage/: README.md
lecture-1-NFage/src/: exercise1.c  exercise2.c
lecture-10-NFage/: CMakeLists.txt  README.md
lecture-10-NFage-2/src/: exercise-12.3.c  exercise-12.5.c
lecture-10-NFage/src/: CMakeLists.txt  exercise-12.3.c  exercise-PSPDC-607-1.c
lecture-11-NFage/: CMakeLists.txt  README.md
lecture-11-NFage/src/: CMakeLists.txt  Live.c  exercise-11.3.c  exercise-PSPDC-587-1.c  live-opgave.c  polske.c
lecture-12-NFage/: CMakeLists.txt  README.md
lecture-12-NFage/src/: CMakeLists.txt  exercise-13.5.c
lecture-12-live-NFage/: CMakeLists.txt  cars.txt  planets.txt
lecture-12-live-NFage/src/: CMakeLists.txt  car.c  planets.c  scratch.c
lecture-13-live-NFage/: CMakeLists.txt
lecture-13-live-NFage/src/: CMakeLists.txt  list_cashier.c  live.c  tree_cashier.c
lecture-2-NFage/: CMakeLists.txt  README.md
lecture-2-NFage/src/: CMakeLists.txt  exercise-2.1.c  exercise-2.3.c  exercise-2.4.c  exercise-2.6.c  exercise-2.7.c  exercise-PSPDC-106-3.c  exercise-PSPDC-124-9.c  exercise-PSPDC-125-11.c  exercise-PSPDC-88-1.c
lecture-3-NFage/: CMakeLists.txt
lecture-3-NFage-2/: README.md
lecture-3-NFage-2/src/: CMakeLists.txt  exercise-3.1.c  exercise-PSPDC-242-P1.c  exercise-PSPDC-242-P2.c
lecture-3-NFage/src/: exercise-3.1.c  exercise-PSPDC-205-1.c  exercise-PSPDC-242-P1.c
lecture-4-NFage/: CMakeLists.txt  README.md
lecture-4-NFage/src/: CMakeLists.txt  exercise-PSPDC-267-1.c  exercise-PSPDC-281-1.c  exercise-PSPDC-292-P2.c
lecture-5-NFage/: CMakeLists.txt  README.md
lecture-5-NFage/src/: CMakeLists.txt  exercise-5.2.c  exercise-5.7.c  find_primes.c
lecture-6-Live-Coding/: CMakeLists.txt  hello.c  hello.h  main.c
lecture-6-NFage/: CMakeLists.txt  README.md
lecture-6-NFage/src/: CMakeLists.txt  exercise-6.2.c  exercise-6.3.c  exercise-6.6.c
lecture-7-NFage/: CMakeLists.txt  README.md
lecture-7-NFage/src/: CMakeLists.txt  exercise-9.5.c
lecture-8-NFage-2/: CMakeLists.txt  README.md
lecture-8-NFage-2/src/: CMakeLists.txt  menu.c  point_distance.c  time_calc.c
lecture-8-NFage-2/test/: CMakeLists.txt  test_point_distance_2d.c
lecture-8-NFage/src/: exercise-PSPDC-391-7.c  point_distance.h  time_calc.h
lecture-8-NFage/test/: test_point_distance_nd.c  time_test.c
lecture-9-NFage-2/: CMakeLists.txt  README.md
lecture-9-NFage-2/src/: exercise-10.3.c  exercise-PSPDC-518-1.c
lecture-9-NFage/src/: CMakeLists.txt  exercise-10.3.c  exercise-10.4.c  exercise-PSPDC-490-2.c  lecture9-notes.cpp
lecture2/: CMakeLists.txt  library.h
project-1-NFage/src/: CMakeLists.txt  project1.c
project-2-NFage/: CMakeLists.txt  README.md
project-2-NFage/src/: CMakeLists.txt  game_of_lines.c
project-3-NFage/: CMakeLists.txt  README.md
project-3-NFage/src/: CMakeLists.txt
