

add_executable(exercise-10.2 exercise-10.2.c)
add_executable(exercise-11.1 exercise-11.1.c)
add_executable(exercise-11.3 exercise-11.3.c)
add_executable(exercise-11.5 exercise-11.5.c)
add_executable(exercise-PSPDC-587-1 exercise-PSPDC-587-1.c)
add_executable(exercise-PSPDC-588-3 exercise-PSPDC-588-3.c)
add_executable(calculator polske.c)
add_executable(live live.c)
add_executable(live-opgave live-opgave.c)