add_executable(exercise-2.1 exercise-2.1.c)
add_executable(exercise-2.3 exercise-2.3.c)
add_executable(exercise-2.4 exercise-2.4.c)
add_executable(exercise-2.6 exercise-2.6.c)
add_executable(exercise-2.7 exercise-2.7.c)

add_executable(exercise-PSPDC-125-11 exercise-PSPDC-125-11.c)
add_executable(exercise-PSPDC-106-3 exercise-PSPDC-106-3.c)
add_executable(exercise-PSPDC-124-9 exercise-PSPDC-124-9.c)

add_executable(exercise-PSPDC-88-1 exercise-PSPDC-88-1.c)
add_executable(exercise-PSPDC-88-2 exercise-PSPDC-88-2.c)