
add_executable(exercise-5.2 exercise-5.2.c find_primes.c)
add_executable(exercise-5.3 exercise-5.3.c)
add_executable(exercise-5.5 exercise-5.5.c)
add_executable(exercise-5.6 exercise-5.6.c)
add_executable(exercise-5.7 exercise-5.7.c)

add_executable(exercise-PSPDC-143-1 exercise-PSPDC-143-1.c)
add_executable(exercise-PSPDC-166-2 exercise-PSPDC-166-2.c)
