
add_executable(exercise-5.3 exercise-5.3.c)
add_executable(exercise-5.5 exercise-5.5.c)
add_executable(exercise-5.6 exercise-5.6.c)

add_executable(exercise-6.1 exercise-6.1.c)
add_executable(exercise-6.2 exercise-6.2.c)
add_executable(exercise-6.3 exercise-6.3.c)
add_executable(exercise-6.4 exercise-6.4.c)
add_executable(exercise-6.6 exercise-6.6.c)

add_executable(exercise-PSPDC-391-7 exercise-PSPDC-391-7.c)
