
add_executable(exercise-9.2 exercise-9.2.c)
add_executable(exercise-9.3 exercise-9.3.c)
add_executable(exercise-9.4 exercise-9.4.c)
add_executable(exercise-9.5 exercise-9.5.c)
add_executable(exercise-9.8 exercise-9.8.c)

add_executable(exercise-PSPDC-464-1 exercise-PSPDC-464-1.c)
add_executable(exercise-PSPDC-465-5 exercise-PSPDC-465-5.c)
add_executable(exercise-PSPDC-496-5 exercise-PSPDC-496-5.c)
