

add_executable(exercise-10.4.c exercise-10.4.c)
add_executable(exercise-10.3 exercise-10.3.c)
add_executable(exercise-9.9 exercise-9.9.c)

add_executable(exercise-PSPDC-490-2 exercise-PSPDC-490-2.c)
add_executable(exercise-PSPDC-518-1 exercise-PSPDC-518-1.c)
add_executable(exercise-PSPDC-539-8 exercise-PSPDC-539-8.c)